[package]
name = "mdl"
version = "0.2.0"
authors = ["James Webber <jwebber@broadinstitute.org>"]
edition = "2021"

[lib]
name = "mdl"
crate-type = ["cdylib"]

[dependencies]
hashbrown = "0.14.3"
futures = { version = "0.3.30", default-features = false, features = ["std"] }
log = "0.4.21"
noodles = { version = "0.66.0", features = ["sam", "bam", "bgzf"] }
noodles-bam = { version = "0.57.0", features = ["async"] }
pyo3 = { version = "0.20.3", features = ["extension-module", "hashbrown"] }
pyo3-log = "0.9.0"
tokio = { version = "1.36.0", features = [
    "fs",
    "io-std",
    "macros",
    "rt-multi-thread",
] }
