[package]
name = "mdl"
version = "0.2.1"
authors = ["James Webber <jwebber@broadinstitute.org>"]
edition = "2021"

[lib]
name = "mdl"
crate-type = ["cdylib"]

[dependencies]
futures = { version = "0.3.30", default-features = false, features = ["std"] }
log = "0.4.21"
noodles = { version = "0.70.0", features = ["sam", "bam", "bgzf"] }
noodles-bam = { version = "0.60.0", features = ["async"] }
pyo3 = { version = "0.21", features = ["extension-module", "hashbrown"] }
pyo3-log = "0.10"
tokio = { version = "1.37.0", features = [
    "fs",
    "io-std",
    "macros",
    "rt-multi-thread",
] }
