[build-system]
requires = ["maturin>=1.2.3,<1.2.4"]
build-backend = "maturin"

[project]
name = "callao"
description = "Tools and scripts for processing Pacbio BAM files"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["Click", "mdl-core"]
dynamic = ["version"]

[project.scripts]
callao = "mdl.callao.__main__:cli"

[tool.maturin]
python-source = "pysrc"
module-name = "mdl.callao._callao"
sdist-include = ["pysrc/mdl/callao/logging.toml"]

[tool.ruff]
src = ["src"]
select = ["E", "F", "I", "A"]
