[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "callao"
description = "Tools and scripts for processing Pacbio BAM files"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["Click", "mdl-core"]
optional-dependencies = { dev = ["pre-commit", "ruff"] }
dynamic = ["version"]

[project.scripts]
callao = "mdl.callao.__main__:cli"

[tool.maturin]
python-source = "pysrc"
module-name = "mdl.callao._callao"

[tool.ruff]
src = ["src"]
select = ["E", "F", "I", "A"]
ignore = ["E501"]
